Fixed many typos

--- a/paper.tex
+++ b/paper.tex
@@ -84,7 +84,7 @@
 \newcommand\restr[2]{{\left.\kern-\nulldelimiterspace #1 \vphantom{\big|}\right|_{#2}}}
 \newcommand*\MapsTo{\xrightarrow[\raisebox{0.25 em}{\smash{\ensuremath{\sim}}}]{}}  
 
-\title{On centrality of orthogonal $\Kt$}
+\title{On centrality of even orthogonal $\Kt$}
 \keywords {Steinberg groups, $K_2$-functor. {\em Mathematical Subject Classification (2010):} 19C09}
 
 \author {Andrei Lavrenov}
@@ -125,7 +125,7 @@ Thus, similarly to the definition of algebraic $\mathrm{SK}_1$ and $\Kt$-functor
 $$\xymatrix{1 \ar[r] & \Kt(\Phi, R) \ar[r] & \St(\Phi, R) \ar[r] & \GG(\Phi, R) \ar[r] & \Ko(\Phi, R) \ar[r] & 1.}$$
 
 It is a classical theorem of M.~Kervaire and R.~Steinberg that the stable Steinberg group $\St(R)$ is the universal central extension of $\E(R)$, see \cite[Theorem~III.5.5]{Kbook}.
-The unstable analogue of the ``universality'' part of this theorem has been known since 1970's for $\Phi$ with of $\ell \geq 5$ (or even $\ell \geq 4$ for $\Phi=\rA_\ell, \rB_\ell, \rC_\ell$), see \cite{St1, KaS}.
+The unstable analogue of the ``universality'' part of this theorem has been known since 1970's for $\Phi$ with rank $\ell \geq 5$ (or even $\ell \geq 4$ for $\Phi=\rA_\ell, \rB_\ell, \rC_\ell$), see \cite{St1, KaS}.
 However, until recently, the analogue of the ``centrality'' part was only known in the special case $\Phi=\rA_\ell$, $\ell\geq 3$ see~\cite[Corollary~2]{vdK}.
 The best known result for other classical $\Phi$ was that the centrality holds ``in the stable range'',
 i.\,e. when the dimension of $R$ is suffiently small as compared to the rank of $\Phi$, see~\cite[Corollary~3.4]{St78}.
@@ -587,7 +587,7 @@ Thus, $X_{u,wb}(a)=\prod_{i<j}x(u,\, u_{ij} ac_{ij})$.
 It is enough to prove the assertion of $(\mathrm d)$ in the special case $g=x_{hk}(r)$.
 If $h\neq i,j$ or $\{h,k\}=\{i,j\}$ the vector $\phi(g)^*u_{ij}ac_{ij}$ still has two zero coordinates.
 
-Now consider the case $j=h$, $i\neq k$
+Now consider the case $j=h$, $i\neq k$.
 By~\cite[3.12]{vdK} one has $$g\,x(u,\,u_{ij}ac_{ij})g\inv=x(\phi(g)u,\,\phi(g)^*u_{ij}ac_{ij}).$$
 Set $u' = \phi(g)u$, since
 $\phi(g)^*u_{ij} = t_{kj}(-r) \cdot u_{ij} = e_iu_j - e_ju_i + e_kru_i =u'_{ij}+u'_{ki}r,$ 
@@ -609,7 +609,7 @@ One can repeat van der Kallen's and Tulenbaev's arguments and prove the followin
 We leave the proof of this lemma to the reader.
 \begin{lm}
 \label{yproperties}
-For $u$, $u'$, $w$ and $v\in B^n$, such that $u$ and $u'$ have decomposition as in above definition, $w^tv=0$, $a$, $b\in I(v)$, $c\in B$, $g\in\St(n,\,B)$ holds
+For $u$, $u'$, $w$ and $v\in B^n$, such that $u$ and $u'$ have decomposition as in the above definition, $w^tv=0$, $a$, $b\in I(v)$, $c\in B$, $g\in\St(n,\,B)$ one has
 \begin{enumerate}
 \item $Y_{uc,v}(a)=Y_{u,v}(ca)$,
 \item $Y_{u,vc}(ca)=Y_{uc^2,v}(a)$,
