Fixed compilation at arXiv

--- a/paper.tex
+++ b/paper.tex
@@ -1,9 +1,7 @@
 \documentclass[11pt]{amsart}
-\usepackage{amscd, amsmath, amssymb, amsthm, amsfonts, amstext, verbatim, enumitem, mathtools, xfrac, nameref, thmtools, hyperref}
+\usepackage{amscd, amsmath, amssymb, amsthm, amsfonts, amstext, verbatim, enumitem, mathtools, xfrac, microtype, nameref, thmtools, hyperref, cleveref}
 \usepackage[utf8]{inputenc}
 \usepackage[backend=bibtex, citestyle=numeric-comp, natbib=true, sortlocale=en_US, url=false, doi=false, eprint=true, maxbibnames=4]{biblatex}            
-\usepackage[activate={true,nocompatibility}]{microtype}
-\usepackage[capitalize]{cleveref}
 \usepackage[english]{babel} 
 \usepackage{stmaryrd}
 \usepackage[matrix,arrow,curve]{xy}
